added comments and renamed a notebook file

--- a/MusicComposition.ipynb
+++ b/MusicComposition.ipynb
@@ -4,7 +4,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded waldstein_1\n",
+      "Loaded beethoven_opus90_2\n",
+      "Loaded waldstein_3\n",
+      "Loaded beethoven_opus10_2\n",
+      "Loaded beethoven_opus10_3\n",
+      "Loaded appass_2\n",
+      "Loaded appass_3\n",
+      "Loaded pathetique_1\n",
+      "Loaded mond_1\n",
+      "Loaded beethoven_les_adieux_2\n",
+      "Loaded mond_3\n",
+      "Loaded pathetique_2\n",
+      "Loaded pathetique_3\n",
+      "Loaded beethoven_les_adieux_1\n",
+      "Loaded beethoven_opus22_1\n",
+      "Loaded beethoven_hammerklavier_1\n",
+      "Loaded beethoven_opus22_4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "model.py:370: UserWarning: Updating an `OrderedUpdates` with a non-ordered dictionary with 2+ elements could make your code non-deterministic\n",
+      "  self.walk_input: next_input\n",
+      "model.py:373: UserWarning: Updating an `OrderedUpdates` with a non-ordered dictionary with 2+ elements could make your code non-deterministic\n",
+      "  updates.update({hidden:newstate for hidden, newstate, layer in zip(self.walk_hiddens, new_states, self.time_model.layers) if has_hidden(layer)})\n"
+     ]
+    }
+   ],
    "source": [
     "# %load main.py\n",
     "import cPickle as pickle\n",
@@ -47,13 +81,13 @@
     "\tpickle.dump(all_thoughts, open('output/'+name+'.p','wb'))\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "\n",
+    "    # load data\n",
     "    pcs = multi_training.loadPieces(\"music\")\n",
-    "\n",
+    "    # create instance model\n",
     "    m = model.Model([300,300],[100,50], dropout=0.5)\n",
-    "\n",
+    "    # train data\n",
     "    multi_training.trainPiece(m, pcs, 10000)\n",
-    "\n",
+    "    # save model weights\n",
     "    pickle.dump( m.learned_config, open( \"output/final_learned_config.p\", \"wb\" ) )\n"
    ]
   },
