added output folder and remove .idea folder/

--- a/MusicComposition.ipynb
+++ b/MusicComposition.ipynb
@@ -37,6 +37,13 @@
       "model.py:373: UserWarning: Updating an `OrderedUpdates` with a non-ordered dictionary with 2+ elements could make your code non-deterministic\n",
       "  updates.update({hidden:newstate for hidden, newstate, layer in zip(self.walk_hiddens, new_states, self.time_model.layers) if has_hidden(layer)})\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch 0, error=127841.939428\n"
+     ]
     }
    ],
    "source": [
